<resources>
    <string name="app_name">Interested</string>
    <string name="name">이름</string>
    <string name="telephone">전화번호</string>
    <string name="birth">생년월일</string>
    <string name="address">주소</string>
    <string name="postnum">우편번호</string>
    <string name="email">E-mail *</string>
    <string name="sms">SMS</string>
    <string name="kkt">카카오톡</string>
    <string name="privacypolicy">개인정보수집이용동의</string>
    <string name="fordetail">자세히+</string>
    <string name="consent">동의합니다</string>
    <string name="description_title">정책 이름</string>
    <string name="description_agency">정부 기관</string>
    <string name="user_id_title">ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_applied_list">MyAppliedList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="id">ID</string>
    <string name="profilechange">프로필변경</string>
    <string name="changeinfo">ㅤ회원정보 변경</string>
    <string name="changeinterest">ㅤ관심분야 변경</string>
    <string name="removeuser">ㅤ회원 탈퇴</string>
    <string name="removeuser_detail_1">정말로</string>
    <string name="removeuser_detail_2">탈퇴하시겠습니까?</string>
    <string name="confirm">예, 탈퇴하겠습니다.</string>
    <string name="policy_name">정책 이름</string>
    <string name="policy_agency">| 정부 기관</string>
    <string name="policy_date">*날짜</string>
    <string name="policy_description">*내용</string>
    <string name="policy_homepage">*홈페이지 URL</string>
    <string name="policy_recommend">추천 </string>
    <string name="policy_unrecommend">비추천 </string>
    <string name="policy_get_review">다른 후기 보러가기</string>
    <string name="apply">지원하기</string>
    <string name="contour">|</string>





</resources>