<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="293dp"
    android:layout_height="210dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="#1D2D69"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialogtitle"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/removeuser"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginLeft="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/btn_close"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/removeuser_detail_1"
            android:textColor="#FF0000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/removeuser_detail_2"
            android:textColor="#FF0000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/btn_confirm"
            app:layout_constraintEnd_toEndOf="parent">
        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>