<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="48dp"
    android:background="#1D2D69"
    android:clipToPadding="false"
    tools:context="com.example.myprofile.MyProfileActivity">

    <View
        android:id="@+id/myprofile_view"
        android:layout_width="380dp"
        android:layout_height="781dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/Toptitle"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="#1D2D69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="42.95dp"
        android:layout_height="42.95dp"
        app:layout_constraintTop_toTopOf="@id/Toptitle"
        app:layout_constraintStart_toStartOf="@id/Toptitle"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/logo1"
        android:id="@+id/logoTop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:text="로그인"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/Toptitle"
        android:layout_marginTop="8dp"
        android:id="@+id/login"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Toptitle">

        <ImageView
            android:id="@+id/myprofile_id_rec"
            android:layout_width="450dp"
            android:layout_height="261dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/myprofile_id_rec" />

        <ImageView
            android:id="@+id/myprofile_id_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myprofile_id_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintStart_toStartOf="@+id/myprofile_id_rec"
            app:layout_constraintTop_toTopOf="@+id/myprofile_id_rec"
            app:layout_constraintVertical_bias="0.366" />

        <TextView
            android:id="@+id/myprofile_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/blue"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/myprofile_id_rec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.296"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myprofile_id_circle"
            app:layout_constraintVertical_bias="0.283">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.02">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="353dp"
            android:layout_height="322dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/profilechange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/profilechange"
                android:textColor="@color/blue"
                android:textSize="27dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_change_info"
                android:layout_width="360dp"
                android:layout_height="90dp"
                android:background="@drawable/btn_myprofile"
                android:drawableLeft="@drawable/ic_birth"
                android:paddingLeft="30dp"
                android:text="@string/changeinfo"
                android:textAlignment="viewStart"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_change_interest"
                android:layout_width="360dp"
                android:layout_height="90dp"
                android:background="@drawable/btn_myprofile"
                android:drawableLeft="@drawable/ic_birth"
                android:paddingLeft="30dp"
                android:text="@string/changeinterest"
                android:textAlignment="viewStart"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_remove_user"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_myprofile"
                android:drawableLeft="@drawable/ic_birth"
                android:paddingLeft="30dp"
                android:text="@string/removeuser"
                android:textAlignment="viewStart"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>