<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_top"
    android:layout_marginBottom="@dimen/margin_bottom"
    android:layout_marginStart="@dimen/margin_left"
    android:layout_marginEnd="@dimen/margin_right"
    android:background="#1D2D69"
    android:orientation="vertical"
    tools:context=".SignUp3Activity"
    android:clipToPadding="false">

    <!--    뒤로가기 버튼-->
    <ImageView
        android:layout_width="429dp"
        android:layout_height="416dp"
        android:src="@drawable/logo2"
        app:layout_constraintBottom_toTopOf="@+id/backwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="⟨ 뒤로가기"
        android:textSize="20sp"
        android:background="#00000000"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/back"/>

    <!--    흰색 배경-->
    <View
        android:id="@+id/backwhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="206dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintVertical_bias="0.982"
        tools:layout_editor_absoluteX="0dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/centerImage"
        android:layout_width="99.26dp"
        android:layout_height="99.26dp"
        android:layout_marginTop="163dp"
        android:background="@drawable/logo_bg"
        android:src="@drawable/ic_helpinghand"
        app:civ_border_color="#1D2D69"
        app:civ_border_overlay="true"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--     회원가입-->

    <!--    가입 정보 입력 부분-->

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="정보수신"
        android:textColor="#1D2D69"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centerImage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_title"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:weightSum="7"
        android:id="@+id/signup_pt3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="3">

            <TextView
                android:id="@+id/email_title"
                android:layout_width="74dp"
                android:layout_height="23dp"
                android:text="@string/email"
                android:textColor="#1D2D69"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.013" />

            <EditText
                android:id="@+id/ET_email"
                android:textColor="#9B9B9B"
                android:layout_width="281dp"
                android:layout_height="31dp"
                android:background="@drawable/rec_style"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.219"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.295" />

            <CheckBox
                android:id="@+id/checkbox_sms"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:button="@drawable/selector_custom_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ET_email"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/TV_sms"
                android:layout_width="74dp"
                android:layout_height="23dp"
                android:text="@string/sms"
                android:textColor="#1D2D69"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toEndOf="@+id/checkbox_sms"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.569" />

            <CheckBox
                android:id="@+id/checkbox_kkt"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@drawable/selector_custom_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_sms"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/TV_kkt"
                android:layout_width="74dp"
                android:layout_height="23dp"
                android:text="@string/kkt"
                android:textColor="#1D2D69"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toEndOf="@+id/checkbox_kkt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.821" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="355dp"
            android:layout_height="125dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="3">

            <TextView
                android:id="@+id/privpolicy_title"
                android:layout_width="219dp"
                android:layout_height="23dp"
                android:text="@string/privacypolicy"
                android:textColor="#1D2D69"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.121"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/privpolicy_rec"
                android:layout_width="301dp"
                android:layout_height="54dp"
                android:background="@drawable/rec_privpolicy_style"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.296"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/privpolicy_title"
                app:layout_constraintVertical_bias="0.15" />

            <android.widget.Button
                android:id="@+id/privpolicy_detail"
                android:layout_width="40dp"
                android:layout_height="17dp"
                android:layout_marginTop="13dp"
                android:background="@color/white"
                android:stateListAnimator="@null"
                android:text="@string/fordetail"
                android:textColor="#878787"
                android:textSize="10sp"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.879"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.78" />

            <CheckBox
                android:id="@+id/checkbox_consent"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@drawable/selector_custom_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/privpolicy_title"
                app:layout_constraintVertical_bias="0.87" />

            <TextView
                android:id="@+id/TV_consent"
                android:layout_width="74dp"
                android:layout_height="23dp"
                android:text="@string/consent"
                android:textColor="#1D2D69"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.028"
                app:layout_constraintStart_toEndOf="@+id/checkbox_consent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.892" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="355dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1">

            <!--    다음 버튼-->
            <android.widget.Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/changed_btn"
                android:text="다음"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.473" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>